add the list endpoint
